# hasktorch-nix-skeleton

./: README.org  flake.nix  hie.yaml
hasktorch-skeleton/: hasktorch-skeleton.cabal
hasktorch-skeleton/exe/: classify-mnist.hs  uncertainty-mnist.hs
