cabal-version:       2.4
name:                hasktorch-skeleton
version:             0.0.0.0


common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans
  default-language: Haskell2010
  build-depends:
      base
    , hasktorch

common binary-base
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hasktorch-skeleton

library
  import: base
  exposed-modules:
    HasktorchSkeleton
  hs-source-dirs: src

executable example
  import: binary-base
  main-is: Main.hs
  hs-source-dirs: exe
